--- a/web/applications/metadata-editor-start/start.html
+++ b/web/applications/metadata-editor-start/start.html
@@ -26,7 +26,7 @@ function getURLbyUDI()
             async: true,
             statusCode: {
                 400: function(message,text,jqXHR) {
-                    jQuery('<div title="Warning"><p>Cannot load Dataset with UDI:' + udival + ', reason:' + message.responseJSON.message + '.</p></div>').dialog({
+                    jQuery('<div title="Warning"><p>Cannot load Dataset with UDI:' + udival + '.</p></div>').dialog({
                         autoOpen: true,
                         resizable: false,
                         minWidth: 300,
