Clear previous value when selecting file for upload

--- a/web/applications/metadata-editor-start/start.html
+++ b/web/applications/metadata-editor-start/start.html
@@ -125,6 +125,7 @@ function uploadFile()
 
         $( "#upload" )
         .click(function( event ) {
+            $("#file").val("");
             $("#file").click();
         });
     });
