change all references to 'register' to 'submit' including all derived forms

--- a/web/applications/metadata-editor-start/help.html
+++ b/web/applications/metadata-editor-start/help.html
@@ -16,8 +16,8 @@ The GRIIDC Metadata Editor is a web application that generates ISO 19115-2 compl
 <h3>Load from File:</h3>
 <li>This button will load the form with information from a previously generated file stored on your local computer. This file can be a full metadata file, a temporary saved file, or a template. The Metadata Editor expects a file with ISO 19115-2 XML content.
 </li></dd>
-<dd><h3>Load from Registered Dataset:</h3>
-<li>This button will pre-populate the form with information about a dataset from the GRIIDC Registry.  Your dataset must be registered and have a GRIIDC UDI to use this option.  Not all fields will be populated using this method as the registry does not contain sufficient information to complete the required fields.
+<dd><h3>Load from Submitted Dataset:</h3>
+<li>This button will pre-populate the form with information about a dataset previously submitted to GRIIDC.  Your dataset must have already been submitted and have a GRIIDC UDI to use this option.  Not all fields will be populated using this method as submissions do not contain sufficient information to complete the required fields.
 </li>
 </dd>
 <dd><h3>Save to File:</h3>
@@ -27,7 +27,7 @@ The GRIIDC Metadata Editor is a web application that generates ISO 19115-2 compl
 <li>This button will reload a blank form.
 </li></dd>
 <dd><h3>Check and Save to File:</h3>
-<li>This button will check that all required fields are completed then save the contents of the form to an ISO 19115-2 XML metadata file on your local computer.  This file is correctly formed XML adhering to the ISO 19115-2 Metadata standard but it is NOT validated at this stage.  Once saved, the metadata can be submitted to GRIIDC for validation through the Dataset Registration utility (<a href="https://data.gulfresearchinitiative.org/dataset-registration">https://data.gulfresearchinitiative.org/dataset-registration</a>)
+<li>This button will check that all required fields are completed then save the contents of the form to an ISO 19115-2 XML metadata file on your local computer.  This file is correctly formed XML adhering to the ISO 19115-2 Metadata standard but it is NOT validated at this stage.  Once saved, the metadata can be submitted to GRIIDC for validation through the Dataset Submission utility (<a href="https://data.gulfresearchinitiative.org/dataset-submission">https://data.gulfresearchinitiative.org/dataset-submission</a>)
 </li></dd>
 <dd><h3>Help:</h3>
 <li>This button will launch a dialog box that includes instructions and help text for using the ISO 19115-2 Metadata Editor.</li></dd>
