--- a/web/applications/metadata-editor-start/help.html
+++ b/web/applications/metadata-editor-start/help.html
@@ -16,7 +16,7 @@ The GRIIDC Metadata Editor is a web application that generates ISO 19115-2 compl
 <h3>Load from File:</h3>
 <li>This button will load the form with information from a previously generated file stored on your local computer. This file can be a full metadata file, a temporary saved file, or a template. The Metadata Editor expects a file with ISO 19115-2 XML content.
 </li></dd>
-<dd><h3>Load from Submitted Dataset:</h3>
+<dd><h3>Load from GRIIDC Dataset:</h3>
 <li>This button will pre-populate the form with information about a dataset previously submitted to GRIIDC.  Your dataset must have already been submitted and have a GRIIDC UDI to use this option.  Not all fields will be populated using this method as submissions do not contain sufficient information to complete the required fields.
 </li>
 </dd>
